[package]
name = "tcp-stack"
version = "0.1.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap="0.1.2"
etherparse = "0.9.0"
log="0.4.8"
pretty_env_logger="0.4.0"

[dependencies.crossbeam-queue]
version="0.2.1"
#default-features = false
#features=["alloc"]